# NUC980_NuWriter_CMD

./: .gitignore  Makefile  Makefile.am  Makefile.in  NucLibUsb.c  README  README.md  Serial.h  UXmodem.c  common.h  config.h  config.h.in  config.status  configure  configure.ac  device.c  main.c  parse.c  read_file.c  run.ini
.deps/: NucLibUsb.Po  UXmodem.Po  crc32.Po  device.Po  main.Po  minIni.Po  parse.Po  read_file.Po
minini/: minIni.h
nudata/sys_cfg/: NUC980DK71Y.ini  NUC980DK71YC.ini  SCM605L216TF.ini
